--- a/src/main/java/Ventanas/Cocinero.form
+++ b/src/main/java/Ventanas/Cocinero.form
@@ -165,14 +165,10 @@
     <Component class="javax.swing.JComboBox" name="Jor_cocinero">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="7">
-            <StringItem index="0" value="1"/>
-            <StringItem index="1" value="2"/>
-            <StringItem index="2" value=""/>
-            <StringItem index="3" value="3"/>
-            <StringItem index="4" value="4"/>
-            <StringItem index="5" value="5"/>
-            <StringItem index="6" value="6"/>
+          <StringArray count="3">
+            <StringItem index="0" value="6"/>
+            <StringItem index="1" value="7"/>
+            <StringItem index="2" value="8"/>
           </StringArray>
         </Property>
       </Properties>
@@ -196,6 +192,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Limpiar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
