--- a/src/main/java/Ventanas/PorteroMostrar.form
+++ b/src/main/java/Ventanas/PorteroMostrar.form
@@ -75,7 +75,7 @@
                 <Column editable="true" title="Nombre" type="java.lang.String"/>
                 <Column editable="true" title="Fech. Nac" type="java.lang.String"/>
                 <Column editable="true" title="Jornada" type="java.lang.String"/>
-                <Column editable="true" title="Edad Avanzada" type="java.lang.Boolean"/>
+                <Column editable="true" title="Edad Avanzada" type="java.lang.String"/>
                 <Column editable="true" title="Sueldo" type="java.lang.Double"/>
               </Table>
             </Property>
